# EduBridge

./: .gitignore  EduBridge_FR_NFR_Complete.docx  EduBridge_SRS_v2 (1).docx  EduBridge_SRS_v2_extracted.txt  EduBridge_UI_Element_Specification.docx  README.md  extracted_docs.txt  render.yaml
backend/: build.gradle
backend/src/main/resources/: application-prod.properties  application.properties
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/db/: bkt.js  contentMesh.js  crypto.js  db.js  evaluator.js  sync.js  translations.js
frontend/src/views/: CourseDetail.jsx  Dashboard.jsx  DistrictAdmin.jsx  Login.jsx  OfflineChatbot.jsx  ParentDashboard.jsx  QuizView.jsx  SchoolAdmin.jsx  TeacherAnalytics.jsx  TeacherCourseManager.jsx
kolibri/: CHANGELOG.md  pnpm-lock.yaml  pyproject.toml
kolibri/.github/: actionlint.yaml  dependabot.yml  githubUtils.js  labeler.yml
kolibri/.github/__tests__/: githubUtils.spec.js
kolibri/.github/workflows/: build_pex.yml  build_whl.yml  call-contributor-issue-comment.yml  call-contributor-pr-reply.yml  call-manage-issue-header.yml  call-pull-request-target.yml  call-update-pr-spreadsheet.yml  check_docs.yml  check_licenses.yml  codeql.yml  community-contribution-label.yml  container_image_cleanup.yml  container_image_publish.yml  dependency_updates.yml  frontend-tests.yml  i18n-download.yml  i18n-upload.yml  morango_integration.yml  no_zombies.yml  npm_publish.yml  npm_version_check.yml  npm_version_comment.yml  platform-debian-server-build_deb.yml  platform-debian-server-release.yml  platform-pi-build_img.yml  postgres.yml  pr_build_comment.yml  pr_build_kolibri.yml  pr_labels.yml  pre-commit.yml  pypi_packages_publish.yml  pypi_upload.yml  release_kolibri.yml  tox.yml  unassign-inactive.yaml  update_contributors.yml  upload_github_release_asset.yml  warm_build_cache.yml
kolibri/build_tools/: preseed_home.sh
kolibri/docs/frontend_architecture/: single_page_apps.rst
kolibri/docs/howtos/: python_monorepo.md
kolibri/kolibri/core/: ai_copilot.py  api_urls.py  apps.py
kolibri/kolibri/core/analytics/: tasks.py
kolibri/kolibri/core/auth/: sync_operations.py  upgrade.py
kolibri/kolibri/core/content/: base_models.py  hooks.py  upgrade.py  zip_wsgi.py
kolibri/kolibri/core/deviceadmin/: tasks.py
kolibri/kolibri/core/discovery/: apps.py
kolibri/python_packages/kolibri-context-translation-plugin/: MANIFEST.in  Makefile  README.md  package.json  pyproject.toml
kolibri/python_packages/kolibri-demo-server-plugin/: MANIFEST.in  package.json  pyproject.toml
kolibri/python_packages/kolibri-demo-server-plugin/kolibri_demo_server_plugin/: __init__.py
(+136 files in other folders)
